# Bspline

./: Bspline.cpp  Bspline.h  README.md
Bsp/devel/: .catkin  .rosinstall  setup.sh
Bsp/devel/lib/bspline_surface/: bsp_test
Bsp/devel/lib/pkgconfig/: bspline_surface.pc
Bsp/src/bspline_surface/: CMakeLists.txt
Bsp/src/bspline_surface/include/: bspline_api.h
Bsp/src/bspline_surface/src/: bsp_test.cpp  bspline.cpp  bspline_api.cpp
BspSlim/devel/: .catkin  .rosinstall  local_setup.sh
BspSlim/devel/lib/bspline_surface/: bsp_test
BspSlim/devel/lib/pkgconfig/: bspline_surface.pc
BspSlim/src/bspline_surface/: CMakeLists.txt
BspSlim/src/bspline_surface/include/: bspline.h  bspline_api.h
BspSlim/src/bspline_surface/src/: bsp_test.cpp  bspline.cpp  bspline_api.cpp
BspSlim_Old_Complete/: readme
BspSlim_Old_Complete/devel/: .catkin  .rosinstall  setup.sh
BspSlim_Release/: readme
BspSlim_Release/devel/: .catkin  setup.sh
BspSlim_Release/src/bspline_surface/: package.xml
bspline_surface_no_pcl/: CMakeLists.txt  README.md  obstacle_2409172024.pcd  simple_bspline_hill.pcd  simple_bspline_hill_cut.pcd
bspline_surface_no_pcl/include/: bspline_surface.h  nanoflann.hpp  utils.h
bspline_surface_no_pcl/src/: bspline_surface.cpp  main.cpp  utils.cpp
testEncapsualtion/bspline_result/: control_point.pcd  downsample.pcd  ground.pcd  test_point.pcd  test_points.pcd  tree_top.pcd
testEncapsualtion/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
testEncapsualtion/src/celltest/: CMakeLists.txt  package.xml
(+39 files in other folders)
